<resources>
    <string name="app_name">Call Management</string>
    <string name="running">Ứng dụng đang chạy nền</string>
    <string name="active">đã bật</string>
    <string name="owner">Vy Hùng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    title navigation bar-->
    <string name="title_action_home">Trang chủ</string>
    <string name="title_action_statistics">Thống kê</string>
    <string name="title_action_all_call">Cuộc gọi</string>
    <string name="title_action_settings">Cài đặt</string>


    <!--    fragment home-->
    <string name="title_hello_fragment_home">Xin chào !</string>
    <string name="title_button_off_fragment_home">Bật ghi âm</string>
    <string name="title_button_on__fragment_home">Đang ghi âm</string>

    <!--    fragment all call-->
    <string name="title_textview_search_fragment_all_call">Tìm kiếm</string>
    <string name="title_textview_day_of_week_2">T2</string>
    <string name="title_textview_day_of_week_3">T3</string>
    <string name="title_textview_day_of_week_4">T4</string>
    <string name="title_textview_day_of_week_5">T5</string>
    <string name="title_textview_day_of_week_6">T6</string>
    <string name="title_textview_day_of_week_7">T7</string>
    <string name="title_textview_day_of_week_cn">CN</string>

    <!--    layout item call-->
    <string name="title_textview_name_of_phone">Người dùng</string>
    <string name="title_textview_sample_phone_number">0398xxxxxx</string>

    <!--    fragment call statistics-->
    <string name="title_textview_all_call">Tất cả</string>
    <string name="title_textview_coming_call">Gọi đến</string>
    <string name="title_textview_outgoing_call">Gọi đi</string>
    <string name="toast_text_view_combined_chart_on_touch">Có %d cuộc gọi vào %s</string>
    <string name="toast_text_view_horizontal_bar_chart_on_touch">%s bạn đã gọi với thời lượng %s</string>
    <!--    // call statistic presenter-->
    <string name="day_of_week">thứ %s</string>
    <string name="sunday">chủ nhật</string>
    <string name="number_of_call">Số cuộc gọi</string>


    <!--    AllCallRecyclerAdapter-->
    <string name="title_un_favorite">Bỏ yêu thích</string>
    <string name="title_favorite">Yêu thích</string>
    <string name="title_delete">Xoá</string>
    <string name="title_sub_menu_view_more">Xem chi tiết</string>
    <string name="title_call_now">Gọi điện</string>
    <string name="title_message_now">Nhắn tin</string>
    <string name="title_sub_menu_delete">Xoá đoạn ghi âm này</string>
    <string name="title_incoming_call">Cuộc gọi đến</string>
    <string name="title_outgoing_call">Cuộc gọi đi</string>
    <!--    menu sub (delete, make phone call ) dialog in  AllCallRecyclerAdapter-->
    <string name="title_header_dialog_delete">Xoá đoạn ghi âm này !</string>
    <string name="title_message_dialog_delete">"Bạn chắc chắn muốn xoá đoạn ghi âm này ? .Không thể phục hồi !"</string>
    <string name="title_message_action_delete_success">Đã xoá đoạn ghi âm này !</string>
    <string name="title_message_action_delete_failed">Không thể xoá đoạn ghi âm này !</string>
    <string name="title_message_action_click_favorite_failed">Có lỗi xảy ra khi thích đoạn âm thanh này !</string>

    <string name="title_header_action_make_phone_call_failed">Không thể gọi ! </string>
    <string name="title_message_action_make_phone_call_failed">Số điện thoại không hợp lệ </string>

    <string name="title_header_action_make_a_message_failed">Không thể gửi tin nhắn ! </string>
    <string name="title_message_action_make_a_message_failed">Số điện thoại không hợp lệ </string>


    <!--    call activity-->
    <string name="title_tv_end_time_date_in_activity_call">Kết thúc lúc</string>
    <string name="title_tv_begin_time_date_in_activity_call">Bắt đầu lúc</string>
    <string name="title_tv_phone_number_in_activity_call">Số điện thoại</string>
    <string name="title_tv_time_duration_in_activity_call">Thời luợng</string>


    <!--    call recorder serviece-->
    <string name="title_notification">Đang chạy....</string>
    <string name="title_detail_notification">Call Management sẽ tự ghi âm các cuộc gọi !</string>

    <!--    ////-->

    <string name="recorder_header">Recorder</string>

    <string name="preferred_audio_source">Nguồn ghi âm thanh</string>
    <string name="preferred_output_format">Định dạnh âm thanh ghi</string>
    <string name="preferred_audio_encoder">Mã hoá âm thanh ghi</string>

    <string name="vibrate">Cảnh báo rung</string>
    <string name="vibrate_description">Khi bắt đầu và dừng ghi</string>

    <string name="turn_on_speaker">Bật loa ngoài</string>
    <string name="turn_on_speaker_description"></string>

    <string name="max_up_volume">Cải thiện âm thanh ghi</string>
    <string name="max_up_volume_description">Cải thiện chất lượng và độ lớn âm thanh khi ghi</string>
    <string name="records_output_location_title">Vị trí tệp ghi</string>

    <!-- Service -->
    <string name="service">Service</string>
    <string name="additional_service">Additional service</string>
    <!-- - Service -->

    <!-- Runtime permissions -->
    <string name="runtime_permissions_not_granted_title">Runtime permissions not granted</string>
    <string name="runtime_permissions_not_granted_message">Some of the requested runtime permissions are not granted. Consider granting them manually as soon as possible. Otherwise application performance may misbehave.</string>
    <!-- - Runtime permissions -->


    <string name="unknown_number">Người dùng</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Không</string>

    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="older">Older</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="number">Number</string>

    <string name="time_date">Time - Date</string>
    <string name="date_time">Date - Time</string>
    <string name="duration">Duration</string>


    <!--    //format-->
    <string name="format_duration">%d phút, %d giây</string>
    <string name="auto_backup">Sao lưu tự động</string>
    <string name="manual_backup">Sao lưu thủ công</string>
</resources>