<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.franky.callmanagement.DayUtil"/>
        <variable
            name="daySelected"
            type="Boolean" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AllCallFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/medium_margin">

            <!--        guideline-->

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line_horizontal_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.08"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line_horizontal_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line_horizontal_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.7"/>


            <!--        Layout-->

<!--            search bar -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lin_layout_search_bar_in_frgHome"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.appcompat.widget.SearchView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@drawable/custom_search_view"
                        android:focusedByDefault="true"
                        app:defaultQueryHint="Nhập số điện thoại hoăc tên"
                        app:layout_constraintTop_toTopOf="parent"
                        android:drawableLeft="@drawable/ic_baseline_search_24"/>

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:src="@drawable/ic_baseline_filter_alt_24"
                        android:layout_height="30dp"/>

                </LinearLayout>
            </LinearLayout>

<!-- time line-->

        <LinearLayout
            android:id="@+id/lin_layout_time_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_horizontal_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/custom_time_line_rounded"
            android:orientation="horizontal">

            <!--            item 1-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                setIsDaySelected="@{2}"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/small_padding"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/day_of_week_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_day_of_week_2"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
                <TextView
                    android:id="@+id/day_of_month_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="20"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
            </LinearLayout>

            <!--            item 2-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                setIsDaySelected="@{3}"
                android:padding="@dimen/small_padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_day_of_week_3"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
                <TextView
                    android:id="@+id/day_of_month_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="20"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
            </LinearLayout>

            <!--            item 3-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                setIsDaySelected="@{4}"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/small_padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_day_of_week_4"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
                <TextView
                    android:id="@+id/day_of_month_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="20"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
            </LinearLayout>

            <!--            item 4-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                setIsDaySelected="@{5}"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/small_padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_day_of_week_5"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
                <TextView
                    android:id="@+id/day_of_month_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="20"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
            </LinearLayout>

            <!--            item 5-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                setIsDaySelected="@{6}"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/small_padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_day_of_week_6"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
                <TextView
                    android:id="@+id/day_of_month_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="20"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
            </LinearLayout>

            <!--            item 6-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                setIsDaySelected="@{7}"
                android:padding="@dimen/small_padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_day_of_week_7"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
                <TextView
                    android:id="@+id/day_of_month_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="20"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
            </LinearLayout>

            <!--            item 7-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                setIsDaySelected="@{1}"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/small_padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_day_of_week_cn"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
                <TextView
                    android:id="@+id/day_of_month_cn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="20"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_font">
                </TextView>
            </LinearLayout>


        </LinearLayout>

<!--            button change timeline-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/custom_navigate_time_line_rounded">

            <ImageButton
                android:id="@+id/btn_previous_time_line"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:background="@drawable/custom_button_next_previous_rounded"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />

            <TextView
                android:id="@+id/tv_from_day_to_day"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="28/2  => 6/3"
                android:textSize="@dimen/medium_font"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_next_time_line"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:background="@drawable/custom_button_next_previous_rounded"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
        </RelativeLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>




    </FrameLayout>
</layout>